src/test/deca/codegen/invalid/div_by_zero1.deca
// Description:
//  Verif div par zero
//
// Résultat:
//  Erreur

{
float a = 6.0/0;
}
